Implement proxify with new type system

--- a/docs/source/examples/blocres_eval.ipynb
+++ b/docs/source/examples/blocres_eval.ipynb
@@ -18,15 +18,15 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "import emv_tools\n",
-    "import emv_tools.ffi.scipion as scipion\n",
-    "from emv_tools.ffi.blocres import blocres\n",
-    "from emv_tools.scipion_bridge.proxy import OutputInfo\n",
+    "import scipion_bridge\n",
+    "import scipion_bridge.ffi.scipion as scipion\n",
+    "from scipion_bridge.ffi.blocres import blocres\n",
+    "from scipion_bridge.proxy import OutputInfo\n",
     "\n",
     "import shutil\n",
     "\n",
     "from utils import download as D\n",
-    "emv_tools.scipion_bridge.environment.configure_default_env()"
+    "scipion_bridge.utils.environment.configure_default_env()"
    ]
   },
   {
@@ -95,10 +95,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpub4xmotq --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpih2qynru --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_volume_align --i1 data/downloaded/emd_41510.map --i2 /tmp/tmpub4xmotq.vol --local --apply /tmp/tmphru5zloa.vol\n",
+      "[XMIPP] scipion run xmipp_volume_align --i1 data/downloaded/emd_41510.map --i2 /tmp/tmpih2qynru.vol --local --apply /tmp/tmp4bzfkovn.vol\n",
       "1 (1,0,0,0,0,1,0,0,0)--->-0.349795\n",
       "   (1,0,***0.709587,0,0,1,0,0,0)--->-0.354899\n",
       "   (1,0,0.709587,***0.889898,0,1,0,0,0)--->-0.359015\n",
@@ -140,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9423ddecdeee45fb9b66df33ff938ded",
+       "model_id": "97f99f7de97c4178a31b78d51370a3ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,14 +188,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpub4xmotq.vol -o /tmp/tmppjedfjxg.vol --select below 0.02 --substitute binarize\n",
-      "Input File: /tmp/tmpub4xmotq.vol\n",
-      "Output File: /tmp/tmppjedfjxg.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpih2qynru.vol -o /tmp/tmppksnirse.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmpih2qynru.vol\n",
+      "Output File: /tmp/tmppksnirse.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_transform_morphology -i /tmp/tmppjedfjxg.vol -o /tmp/tmp8oap3_7m.vol --binaryOperation dilation --size 2\n",
-      "Input File: /tmp/tmppjedfjxg.vol\n",
-      "Output File: /tmp/tmp8oap3_7m.vol\n",
+      "[XMIPP] scipion run xmipp_transform_morphology -i /tmp/tmppksnirse.vol -o /tmp/tmpla1dvahv.vol --binaryOperation dilation --size 2\n",
+      "Input File: /tmp/tmppksnirse.vol\n",
+      "Output File: /tmp/tmpla1dvahv.vol\n",
       "Initially the image has 487083 pixels set to 1\n",
       "Finally the image has 646612 pixels set to 1\n",
       "Xmipp command detected\n",
@@ -205,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa961696468f4b7694916f9d6c435bc6",
+       "model_id": "1282ccb314174734a791e114342fea38",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,23 +236,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_image_convert -i /tmp/tmpub4xmotq.vol -o /tmp/tmp0jw0bflr.mrc -t vol\n",
-      "Input File: /tmp/tmpub4xmotq.vol\n",
-      "Output File: /tmp/tmp0jw0bflr.mrc\n",
+      "[XMIPP] scipion run xmipp_image_convert -i /tmp/tmpih2qynru.vol -o /tmp/tmprqtfitwb.mrc -t vol\n",
+      "Input File: /tmp/tmpih2qynru.vol\n",
+      "Output File: /tmp/tmprqtfitwb.mrc\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_image_header -i /tmp/tmp0jw0bflr.mrc -s 0.835\n",
-      "Input File: /tmp/tmp0jw0bflr.mrc\n",
+      "[XMIPP] scipion run xmipp_image_header -i /tmp/tmprqtfitwb.mrc -s 0.835\n",
+      "Input File: /tmp/tmprqtfitwb.mrc\n",
       "New sampling rate (Angstrom) = 0.835\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_image_convert -i /tmp/tmp8oap3_7m.vol -o /tmp/tmpntx5ylpq.mrc -t vol\n",
-      "Input File: /tmp/tmp8oap3_7m.vol\n",
-      "Output File: /tmp/tmpntx5ylpq.mrc\n",
+      "[XMIPP] scipion run xmipp_image_convert -i /tmp/tmpla1dvahv.vol -o /tmp/tmpjvct5xl5.mrc -t vol\n",
+      "Input File: /tmp/tmpla1dvahv.vol\n",
+      "Output File: /tmp/tmpjvct5xl5.mrc\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_image_header -i /tmp/tmpntx5ylpq.mrc -s 0.835\n",
-      "Input File: /tmp/tmpntx5ylpq.mrc\n",
+      "[XMIPP] scipion run xmipp_image_header -i /tmp/tmpjvct5xl5.mrc -s 0.835\n",
+      "Input File: /tmp/tmpjvct5xl5.mrc\n",
       "New sampling rate (Angstrom) = 0.835\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
@@ -288,13 +288,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[BlocRes] /home/max/scipion3/software/em/bsoft/bin/blocres  -Mask /tmp/tmpntx5ylpq.mrc -sampling 0.835,0.835,0.835 -box 18 -cutoff 0.5 -nofill -smooth -pad 1 -step 1 -maxresolution 0.5 -verbose 1 data/downloaded/emd_41510_half_map_1.map data/downloaded/emd_41510_half_map_2.map /tmp/tmp0e0w_oka.map\n",
-      "# /home/max/scipion3/software/em/bsoft/bin/blocres -Mask /tmp/tmpntx5ylpq.mrc -sampling 0.835,0.835,0.835 -box 18 -cutoff 0.5 -nofill -smooth -pad 1 -step 1 -maxresolution 0.5 -verbose 1 data/downloaded/emd_41510_half_map_1.map data/downloaded/emd_41510_half_map_2.map /tmp/tmp0e0w_oka.map \n",
-      "# Fri Jul 11 14:02:12 2025\n",
+      "[BlocRes] /home/max/scipion3/software/em/bsoft/bin/blocres  -Mask /tmp/tmpjvct5xl5.mrc -sampling 0.835 0.835 0.835 -box 18 -cutoff 0.5 -nofill -smooth -pad 1 -step 1 -maxresolution 0.5 -verbose 1 data/downloaded/emd_41510_half_map_1.map data/downloaded/emd_41510_half_map_2.map /tmp/tmpunxxt95c.map\n",
+      "# /home/max/scipion3/software/em/bsoft/bin/blocres -Mask /tmp/tmpjvct5xl5.mrc -sampling 0.835 0.835 0.835 -box 18 -cutoff 0.5 -nofill -smooth -pad 1 -step 1 -maxresolution 0.5 -verbose 1 data/downloaded/emd_41510_half_map_1.map data/downloaded/emd_41510_half_map_2.map /tmp/tmpunxxt95c.map \n",
+      "# Wed Jul 16 13:15:13 2025\n",
       "\n",
       "\n",
       "Calculating local resolution:\n",
-      "Mask:                           /tmp/tmpntx5ylpq.mrc (-1)\n",
+      "Mask:                           /tmp/tmpjvct5xl5.mrc (-1)\n",
       "Kernel size:                    18\n",
       "Step size:                      1\n",
       "Edge size:                      9\t9\t9\n",
@@ -314,7 +314,7 @@
     "    str(map_1),\n",
     "    str(map_2),\n",
     "    mask=mask,\n",
-    "    sampling=f\"{metadata.sampling},{metadata.sampling},{metadata.sampling}\",\n",
+    "    sampling=f\"{metadata.sampling} {metadata.sampling} {metadata.sampling}\",\n",
     "    box=int(metadata.resolution * 6),\n",
     "    cutoff=0.5,\n",
     "    step=1,\n",
@@ -332,9 +332,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_pdb_label_from_volume -o /tmp/tmpje2f0tv_.atom.pdb --pdb data/downloaded/pdb8tqo.ent --vol /tmp/tmp0e0w_oka.map --mask /tmp/tmpntx5ylpq.mrc --sampling 0.835 --origin 0.000000 0.000000 0.000000\n",
+      "[XMIPP] scipion run xmipp_pdb_label_from_volume -o /tmp/tmp7efz7quw.atom.pdb --pdb data/downloaded/pdb8tqo.ent --vol /tmp/tmpcwzph5sb.map --mask /tmp/tmpcub3ywqh.mrc --sampling 0.835 --origin 0.000000 0.000000 0.000000\n",
       "PDB file:           data/downloaded/pdb8tqo.ent\n",
-      "Output:       /tmp/tmpje2f0tv_.atom.pdb\n",
+      "Output:       /tmp/tmp7efz7quw.atom.pdb\n",
       "Sampling rate:        0.835\n",
       "Origin:               0.000000 0.000000 0.000000 \n",
       "Radius:               0.8\n",
@@ -366,6 +366,14 @@
     "\n",
     "shutil.copy(atomic_model.path, f\"data/blocres_result_{EMDB_ENTRY}.pdb\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba5fd182-4657-4d13-a844-6b5280eb8102",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
