--- a/docs/source/examples/blocres_eval.ipynb
+++ b/docs/source/examples/blocres_eval.ipynb
@@ -20,8 +20,8 @@
     "\n",
     "import scipion_bridge\n",
     "import scipion_bridge.ffi.scipion as scipion\n",
-    "from scipion_bridge.ffi.blocres import blocres\n",
-    "from scipion_bridge.proxy import OutputInfo\n",
+    "# from scipion_bridge.ffi.blocres import blocres\n",
+    "# from scipion_bridge.proxy import OutputInfo\n",
     "\n",
     "import shutil\n",
     "\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "4fa68922-f07b-429f-8d67-545357fad81f",
    "metadata": {},
    "outputs": [
@@ -95,79 +95,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpih2qynru --centerPDB -v 0 --sampling 0.835 --size 256\n",
-      "Xmipp command detected\n",
-      "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_volume_align --i1 data/downloaded/emd_41510.map --i2 /tmp/tmpih2qynru.vol --local --apply /tmp/tmp4bzfkovn.vol\n",
-      "1 (1,0,0,0,0,1,0,0,0)--->-0.349795\n",
-      "   (1,0,***0.709587,0,0,1,0,0,0)--->-0.354899\n",
-      "   (1,0,0.709587,***0.889898,0,1,0,0,0)--->-0.359015\n",
-      "   (1,0,0.709587,0.889898,***-2.02647,1,0,0,0)--->-0.364126\n",
-      "   (1,0,0.709587,0.889898,-2.02647,***1.0526,0,0,0)--->-0.372631\n",
-      "   (1,0,0.709587,0.889898,-2.02647,1.0526,***-4.86482,0,0)--->-0.388258\n",
-      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,***3.64532,0)--->-0.465488\n",
-      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,***2.76693)--->-0.558715\n",
-      "2 (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.558715\n",
-      "   (1,0,***2.07012,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.576119\n",
-      "   (1,0,2.07012,***0.261686,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.579633\n",
-      "   (1,0,2.07012,0.261686,***-2.07067,1.0526,-4.86482,3.64532,2.76693)--->-0.579657\n",
-      "   (1,0,2.07012,0.261686,-2.07067,***1.00105,-4.86482,3.64532,2.76693)--->-0.723017\n",
-      "   (1,0,2.07012,0.261686,-2.07067,1.00105,***-4.89737,3.64532,2.76693)--->-0.723091\n",
-      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,***3.76995,2.76693)--->-0.723845\n",
-      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,***2.72043)--->-0.723931\n",
-      "3 (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723931\n",
-      "   (1,0,***2.0461,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723942\n",
-      "   (1,0,2.0461,***0.294048,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
-      "   (1,0,2.0461,0.294048,***-2.06749,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
-      "   (1,0,2.0461,0.294048,-2.06749,***1.00104,-4.89737,3.76995,2.72043)--->-0.72397\n",
-      "   (1,0,2.0461,0.294048,-2.06749,1.00104,***-4.88941,3.76995,2.72043)--->-0.723976\n",
-      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,***3.77281,2.72043)--->-0.723977\n",
-      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,3.77281,***2.72281)--->-0.723977\n",
-      "The best correlation is for\n",
-      "Scale                  : 1.00104\n",
-      "Translation (X,Y,Z)    : 2.72281 3.77281 -4.88941\n",
-      "Rotation (rot,tilt,psi): 2.0461 0.294048 -2.06749\n",
-      "Best grey scale       : 1\n",
-      "Best grey shift       : 0\n",
-      "Fitness value         : -0.723977\n",
-      "xmipp_transform_geometry will require the following values\n",
-      "   Angles: 2.0461 0.294048 -2.06749\n",
-      "   Shifts: 2.74644 3.77473 -4.87469\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpwfmeay39 --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
     },
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97f99f7de97c4178a31b78d51370a3ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Output()"
+       "<scipion_bridge.ffi.scipion.SpiderFile at 0x7c64f6deaa30>"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "volume = scipion.xmipp_volume_from_pdb(\n",
     "    pdb_model,\n",
-    "    OutputInfo(None),\n",
     "    center_pdb=\"-v 0\",\n",
     "    sampling=metadata.sampling,\n",
     "    size=metadata.size,\n",
-    ").reassign(\"vol\")\n",
+    ").typed(astype=scipion.SpiderFile)\n",
     "\n",
-    "scipion.xmipp_volume_align(\n",
-    "    embdb_map=str(emdb_map),\n",
-    "    volume=volume,\n",
-    "    local=True,\n",
-    ")\n",
+    "#.reassign(\"vol\")\n",
+    "\n",
+    "# scipion.xmipp_volume_align(\n",
+    "#     embdb_map=str(emdb_map),\n",
+    "#     volume=volume,\n",
+    "#     local=True,\n",
+    "# )\n",
     "\n",
     "volume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "734da911-1f17-41a1-a501-141c1082352a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<SpiderFile for /tmp/tmpwfmeay39 (owned)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(volume)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "81819ab4-3ef1-4c5a-b1e6-7c3d51d252d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volume.file_ext()"
    ]
   },
   {
