Extract output info from function signature

--- a/docs/source/examples/blocres_eval.ipynb
+++ b/docs/source/examples/blocres_eval.ipynb
@@ -95,7 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpkwi70wbf --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "{'inputs': False, 'outputs': True, 'center_pdb': False, 'sampling': False, 'size': False}\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpngp7wmeu --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -103,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<scipion_bridge.ffi.scipion.SpiderFile at 0x706d148faac0>"
+       "<scipion_bridge.ffi.scipion.SpiderFile at 0x7cdbb7c76580>"
       ]
      },
      "execution_count": 4,
