--- a/docs/source/examples/blocres_eval.ipynb
+++ b/docs/source/examples/blocres_eval.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "4fa68922-f07b-429f-8d67-545357fad81f",
    "metadata": {},
    "outputs": [
@@ -95,8 +95,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'inputs': False, 'outputs': True, 'center_pdb': False, 'sampling': False, 'size': False}\n",
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpngp7wmeu --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpauv2tiqt --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "Xmipp command detected\n",
+      "Scipion v3.7.1 - Eugenius\n",
+      "[XMIPP] scipion run xmipp_volume_align --i1 data/downloaded/emd_41510.map --i2 /tmp/tmpauv2tiqt.vol --local --apply /tmp/tmph200h90i.vol\n",
+      "1 (1,0,0,0,0,1,0,0,0)--->-0.349795\n",
+      "   (1,0,***0.709587,0,0,1,0,0,0)--->-0.354899\n",
+      "   (1,0,0.709587,***0.889898,0,1,0,0,0)--->-0.359015\n",
+      "   (1,0,0.709587,0.889898,***-2.02647,1,0,0,0)--->-0.364126\n",
+      "   (1,0,0.709587,0.889898,-2.02647,***1.0526,0,0,0)--->-0.372631\n",
+      "   (1,0,0.709587,0.889898,-2.02647,1.0526,***-4.86482,0,0)--->-0.388258\n",
+      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,***3.64532,0)--->-0.465488\n",
+      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,***2.76693)--->-0.558715\n",
+      "2 (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.558715\n",
+      "   (1,0,***2.07012,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.576119\n",
+      "   (1,0,2.07012,***0.261686,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.579633\n",
+      "   (1,0,2.07012,0.261686,***-2.07067,1.0526,-4.86482,3.64532,2.76693)--->-0.579657\n",
+      "   (1,0,2.07012,0.261686,-2.07067,***1.00105,-4.86482,3.64532,2.76693)--->-0.723017\n",
+      "   (1,0,2.07012,0.261686,-2.07067,1.00105,***-4.89737,3.64532,2.76693)--->-0.723091\n",
+      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,***3.76995,2.76693)--->-0.723845\n",
+      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,***2.72043)--->-0.723931\n",
+      "3 (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723931\n",
+      "   (1,0,***2.0461,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723942\n",
+      "   (1,0,2.0461,***0.294048,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
+      "   (1,0,2.0461,0.294048,***-2.06749,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
+      "   (1,0,2.0461,0.294048,-2.06749,***1.00104,-4.89737,3.76995,2.72043)--->-0.72397\n",
+      "   (1,0,2.0461,0.294048,-2.06749,1.00104,***-4.88941,3.76995,2.72043)--->-0.723976\n",
+      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,***3.77281,2.72043)--->-0.723977\n",
+      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,3.77281,***2.72281)--->-0.723977\n",
+      "The best correlation is for\n",
+      "Scale                  : 1.00104\n",
+      "Translation (X,Y,Z)    : 2.72281 3.77281 -4.88941\n",
+      "Rotation (rot,tilt,psi): 2.0461 0.294048 -2.06749\n",
+      "Best grey scale       : 1\n",
+      "Best grey shift       : 0\n",
+      "Fitness value         : -0.723977\n",
+      "xmipp_transform_geometry will require the following values\n",
+      "   Angles: 2.0461 0.294048 -2.06749\n",
+      "   Shifts: 2.74644 3.77473 -4.87469\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -104,10 +140,10 @@
     {
      "data": {
       "text/plain": [
-       "<scipion_bridge.ffi.scipion.SpiderFile at 0x7cdbb7c76580>"
+       "<scipion_bridge.ffi.scipion.SpiderFile at 0x78785f4aa3d0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,13 +156,11 @@
     "    size=metadata.size,\n",
     ").typed(astype=scipion.SpiderFile)\n",
     "\n",
-    "#.reassign(\"vol\")\n",
-    "\n",
-    "# scipion.xmipp_volume_align(\n",
-    "#     embdb_map=str(emdb_map),\n",
-    "#     volume=volume,\n",
-    "#     local=True,\n",
-    "# )\n",
+    "volume = scipion.xmipp_volume_align(\n",
+    "    embdb_map=str(emdb_map),\n",
+    "    volume=volume,\n",
+    "    local=True,\n",
+    ")\n",
     "\n",
     "volume"
    ]
@@ -151,6 +185,16 @@
    "source": [
     "os.path.exists(volume.path)\n",
     "os.path.getsize(volume.path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91f4d7bd-b6e0-4ba7-9548-e458105f227b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [XMIPP] scipion run xmipp_volume_align --i1 data/downloaded/emd_41510.map --i2 /tmp/tmpvmzz70hb --local --apply /tmp/tmp09zqxngg.vol"
    ]
   },
   {
