Added path constraint to resolve via a certain type

--- a/docs/source/examples/blocres_eval.ipynb
+++ b/docs/source/examples/blocres_eval.ipynb
@@ -10,13 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "60afa068-1149-4c02-bfd0-40d92c92f7f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
+    "import numpy as np\n",
     "\n",
     "import scipion_bridge\n",
     "import scipion_bridge.ffi.scipion as scipion\n",
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "4fa68922-f07b-429f-8d67-545357fad81f",
    "metadata": {},
    "outputs": [
@@ -97,14 +98,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmp4ba4a14a --centerPDB -v 0 --sampling 0.835 --size 256\n"
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmp97ll0ocn --centerPDB -v 0 --sampling 0.835 --size 256\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:Failed to delete file at /tmp/tmp4ba4a14a: [Errno 2] No such file or directory: '/tmp/tmp4ba4a14a'\n"
+      "WARNING:root:Failed to delete file at /tmp/tmp97ll0ocn: [Errno 2] No such file or directory: '/tmp/tmp97ll0ocn'\n"
      ]
     },
     {
@@ -112,53 +113,16 @@
      "output_type": "stream",
      "text": [
       "Xmipp command detected\n",
-      "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_volume_align --i1 data/downloaded/emd_41510.map --i2 /tmp/tmp4ba4a14a.vol --local --apply /tmp/tmpq6ycrejs.vol\n",
-      "1 (1,0,0,0,0,1,0,0,0)--->-0.349795\n",
-      "   (1,0,***0.709587,0,0,1,0,0,0)--->-0.354899\n",
-      "   (1,0,0.709587,***0.889898,0,1,0,0,0)--->-0.359015\n",
-      "   (1,0,0.709587,0.889898,***-2.02647,1,0,0,0)--->-0.364126\n",
-      "   (1,0,0.709587,0.889898,-2.02647,***1.0526,0,0,0)--->-0.372631\n",
-      "   (1,0,0.709587,0.889898,-2.02647,1.0526,***-4.86482,0,0)--->-0.388258\n",
-      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,***3.64532,0)--->-0.465488\n",
-      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,***2.76693)--->-0.558715\n",
-      "2 (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.558715\n",
-      "   (1,0,***2.07012,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.576119\n",
-      "   (1,0,2.07012,***0.261686,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.579633\n",
-      "   (1,0,2.07012,0.261686,***-2.07067,1.0526,-4.86482,3.64532,2.76693)--->-0.579657\n",
-      "   (1,0,2.07012,0.261686,-2.07067,***1.00105,-4.86482,3.64532,2.76693)--->-0.723017\n",
-      "   (1,0,2.07012,0.261686,-2.07067,1.00105,***-4.89737,3.64532,2.76693)--->-0.723091\n",
-      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,***3.76995,2.76693)--->-0.723845\n",
-      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,***2.72043)--->-0.723931\n",
-      "3 (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723931\n",
-      "   (1,0,***2.0461,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723942\n",
-      "   (1,0,2.0461,***0.294048,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
-      "   (1,0,2.0461,0.294048,***-2.06749,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
-      "   (1,0,2.0461,0.294048,-2.06749,***1.00104,-4.89737,3.76995,2.72043)--->-0.72397\n",
-      "   (1,0,2.0461,0.294048,-2.06749,1.00104,***-4.88941,3.76995,2.72043)--->-0.723976\n",
-      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,***3.77281,2.72043)--->-0.723977\n",
-      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,3.77281,***2.72281)--->-0.723977\n",
-      "The best correlation is for\n",
-      "Scale                  : 1.00104\n",
-      "Translation (X,Y,Z)    : 2.72281 3.77281 -4.88941\n",
-      "Rotation (rot,tilt,psi): 2.0461 0.294048 -2.06749\n",
-      "Best grey scale       : 1\n",
-      "Best grey shift       : 0\n",
-      "Fitness value         : -0.723977\n",
-      "xmipp_transform_geometry will require the following values\n",
-      "   Angles: 2.0461 0.294048 -2.06749\n",
-      "   Shifts: 2.74644 3.77473 -4.87469\n",
-      "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<scipion_bridge.ffi.scipion.SpiderFile at 0x7abecfc48220>"
+       "<scipion_bridge.ffi.scipion.SpiderFile at 0x778c9f6e3ee0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,25 +135,25 @@
     "    size=metadata.size,\n",
     ").typed(astype=scipion.SpiderFile, copy_data=False)\n",
     "\n",
-    "volume = scipion.xmipp_volume_align(\n",
-    "    embdb_map=emdb_map,\n",
-    "    volume=volume,\n",
-    "    local=True,\n",
-    ")\n",
+    "# volume = scipion.xmipp_volume_align(\n",
+    "#     embdb_map=emdb_map,\n",
+    "#     volume=volume,\n",
+    "#     local=True,\n",
+    "# )\n",
     "\n",
     "volume"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "0e87a595-d754-40e6-829e-100a1027bff9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "254ff3c381b34629bc8d5354999b2d75",
+       "model_id": "22fb6e77b43c4defb80f970430c9246a",
        "version_major": 2,
        "version_minor": 0
       },
