Add conversion to and from numpy arrays

--- a/docs/source/examples/blocres_eval.ipynb
+++ b/docs/source/examples/blocres_eval.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "60afa068-1149-4c02-bfd0-40d92c92f7f7",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "4fa68922-f07b-429f-8d67-545357fad81f",
    "metadata": {},
    "outputs": [
@@ -98,33 +98,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmp97ll0ocn --centerPDB -v 0 --sampling 0.835 --size 256\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Failed to delete file at /tmp/tmp97ll0ocn: [Errno 2] No such file or directory: '/tmp/tmp97ll0ocn'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmp_2969cjl --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "Xmipp command detected\n",
+      "Scipion v3.7.1 - Eugenius\n",
+      "[XMIPP] scipion run xmipp_volume_align --i1 data/downloaded/emd_41510.map --i2 /tmp/tmp_2969cjl.vol --local --apply /tmp/tmpjqimc0r_.vol\n",
+      "1 (1,0,0,0,0,1,0,0,0)--->-0.349795\n",
+      "   (1,0,***0.709587,0,0,1,0,0,0)--->-0.354899\n",
+      "   (1,0,0.709587,***0.889898,0,1,0,0,0)--->-0.359015\n",
+      "   (1,0,0.709587,0.889898,***-2.02647,1,0,0,0)--->-0.364126\n",
+      "   (1,0,0.709587,0.889898,-2.02647,***1.0526,0,0,0)--->-0.372631\n",
+      "   (1,0,0.709587,0.889898,-2.02647,1.0526,***-4.86482,0,0)--->-0.388258\n",
+      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,***3.64532,0)--->-0.465488\n",
+      "   (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,***2.76693)--->-0.558715\n",
+      "2 (1,0,0.709587,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.558715\n",
+      "   (1,0,***2.07012,0.889898,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.576119\n",
+      "   (1,0,2.07012,***0.261686,-2.02647,1.0526,-4.86482,3.64532,2.76693)--->-0.579633\n",
+      "   (1,0,2.07012,0.261686,***-2.07067,1.0526,-4.86482,3.64532,2.76693)--->-0.579657\n",
+      "   (1,0,2.07012,0.261686,-2.07067,***1.00105,-4.86482,3.64532,2.76693)--->-0.723017\n",
+      "   (1,0,2.07012,0.261686,-2.07067,1.00105,***-4.89737,3.64532,2.76693)--->-0.723091\n",
+      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,***3.76995,2.76693)--->-0.723845\n",
+      "   (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,***2.72043)--->-0.723931\n",
+      "3 (1,0,2.07012,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723931\n",
+      "   (1,0,***2.0461,0.261686,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.723942\n",
+      "   (1,0,2.0461,***0.294048,-2.07067,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
+      "   (1,0,2.0461,0.294048,***-2.06749,1.00105,-4.89737,3.76995,2.72043)--->-0.72397\n",
+      "   (1,0,2.0461,0.294048,-2.06749,***1.00104,-4.89737,3.76995,2.72043)--->-0.72397\n",
+      "   (1,0,2.0461,0.294048,-2.06749,1.00104,***-4.88941,3.76995,2.72043)--->-0.723976\n",
+      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,***3.77281,2.72043)--->-0.723977\n",
+      "   (1,0,2.0461,0.294048,-2.06749,1.00104,-4.88941,3.77281,***2.72281)--->-0.723977\n",
+      "The best correlation is for\n",
+      "Scale                  : 1.00104\n",
+      "Translation (X,Y,Z)    : 2.72281 3.77281 -4.88941\n",
+      "Rotation (rot,tilt,psi): 2.0461 0.294048 -2.06749\n",
+      "Best grey scale       : 1\n",
+      "Best grey shift       : 0\n",
+      "Fitness value         : -0.723977\n",
+      "xmipp_transform_geometry will require the following values\n",
+      "   Angles: 2.0461 0.294048 -2.06749\n",
+      "   Shifts: 2.74644 3.77473 -4.87469\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e744ce495144e688fead2904d13c860",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "<scipion_bridge.ffi.scipion.SpiderFile at 0x778c9f6e3ee0>"
+       "Output()"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -133,27 +161,27 @@
     "    center_pdb=\"-v 0\",\n",
     "    sampling=metadata.sampling,\n",
     "    size=metadata.size,\n",
-    ").typed(astype=scipion.SpiderFile, copy_data=False)\n",
+    ").typed(astype=scipion_bridge.typed.volume.SpiderFile, copy_data=False)\n",
     "\n",
-    "# volume = scipion.xmipp_volume_align(\n",
-    "#     embdb_map=emdb_map,\n",
-    "#     volume=volume,\n",
-    "#     local=True,\n",
-    "# )\n",
+    "volume = scipion.xmipp_volume_align(\n",
+    "    embdb_map=emdb_map,\n",
+    "    volume=volume,\n",
+    "    local=True,\n",
+    ")\n",
     "\n",
     "volume"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "0e87a595-d754-40e6-829e-100a1027bff9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22fb6e77b43c4defb80f970430c9246a",
+       "model_id": "1d83f289134140fe9446a0b3fe9540e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,12 +202,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "91f4d7bd-b6e0-4ba7-9548-e458105f227b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# [XMIPP] scipion run xmipp_volume_align --i1 data/downloaded/emd_41510.map --i2 /tmp/tmpvmzz70hb --local --apply /tmp/tmp09zqxngg.vol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "342ccc7d-ee34-4e14-97a0-766947564153",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<scipion_bridge.typed.volume.SpiderFile at 0x7a02242fc1c0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volume"
    ]
   },
   {
@@ -192,65 +241,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "9f69f91b-8f60-4e7e-853a-4c5355ffb949",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'scipion_bridge.ffi.scipion' has no attribute 'xmipp_transform_threshold'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[43], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m mask \u001b[38;5;241m=\u001b[39m \u001b[43mscipion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mxmipp_transform_threshold\u001b[49m(\n\u001b[1;32m      2\u001b[0m     volume, select\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbelow 0.02\u001b[39m\u001b[38;5;124m\"\u001b[39m, substitute\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinarize\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m )\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# mask = scipion.xmipp_transform_morphology(mask, binary_operation=\"dilation\", size=2)\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# mask\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'scipion_bridge.ffi.scipion' has no attribute 'xmipp_transform_threshold'"
-     ]
-    }
-   ],
-   "source": [
-    "mask = scipion.xmipp_transform_threshold(\n",
-    "    volume, select=\"below 0.02\", substitute=\"binarize\"\n",
-    ")\n",
-    "\n",
-    "# mask = scipion.xmipp_transform_morphology(mask, binary_operation=\"dilation\", size=2)\n",
-    "\n",
-    "# mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fa8327a2-cb3c-4d52-a71d-5be666c520f7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_image_convert -i /tmp/tmpih2qynru.vol -o /tmp/tmprqtfitwb.mrc -t vol\n",
-      "Input File: /tmp/tmpih2qynru.vol\n",
-      "Output File: /tmp/tmprqtfitwb.mrc\n",
-      "Xmipp command detected\n",
-      "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_image_header -i /tmp/tmprqtfitwb.mrc -s 0.835\n",
-      "Input File: /tmp/tmprqtfitwb.mrc\n",
-      "New sampling rate (Angstrom) = 0.835\n",
-      "Xmipp command detected\n",
-      "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_image_convert -i /tmp/tmpla1dvahv.vol -o /tmp/tmpjvct5xl5.mrc -t vol\n",
-      "Input File: /tmp/tmpla1dvahv.vol\n",
-      "Output File: /tmp/tmpjvct5xl5.mrc\n",
-      "Xmipp command detected\n",
-      "Scipion v3.7.1 - Eugenius\n",
-      "[XMIPP] scipion run xmipp_image_header -i /tmp/tmpjvct5xl5.mrc -s 0.835\n",
-      "Input File: /tmp/tmpjvct5xl5.mrc\n",
-      "New sampling rate (Angstrom) = 0.835\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpkzz5xy7e.vol -o /tmp/tmpfw9sjx3z.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmpkzz5xy7e.vol\n",
+      "Output File: /tmp/tmpfw9sjx3z.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7c7f6199f1f54841929eae7c66f1d653",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
+   "source": [
+    "import logging\n",
+    "\n",
+    "\n",
+    "mask = scipion.xmipp_transform_threshold(\n",
+    "    volume, select=\"below 0.02\", substitute=\"binarize\"\n",
+    ")\n",
+    "\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bc70ab1b-0f73-4eba-a790-7c3f5840fe72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpdg8wswwh.vol -o /tmp/tmpv1hqd8_1.vol --select above 0.5 --substitute binarize\n",
+      "Input File: /tmp/tmpdg8wswwh.vol\n",
+      "Output File: /tmp/tmpv1hqd8_1.vol\n",
+      "Xmipp command detected\n",
+      "Scipion v3.7.1 - Eugenius\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a47c87b81944e049740db900053a82e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "np_array = np.random.normal(-1, 1, [256, 256, 256])\n",
+    "scipion.xmipp_transform_threshold(\n",
+    "    np_array, select=\"above 0.5\", substitute=\"binarize\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f177ec3e-98a1-41b2-b5ff-f3b79f3ffba9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scipion v3.7.1 - Eugenius\n",
+      "Xmipp command detected\n",
+      "This method will return the plugin class in the future. Please use getPluginModule instead\n",
+      "\u001b[1;31mPROGRAM\u001b[0m\n",
+      "   xmipp_transform_threshold\n",
+      "\u001b[1;31mUSAGE\u001b[0m\n",
+      "   Threshold volumes and images \n",
+      "\u001b[1;31mSEE ALSO\u001b[0m\n",
+      "   transform_mask, transform_morphology\n",
+      "\u001b[1;31mOPTIONS\u001b[0m\n",
+      "\n",
+      "   \u001b[1;34m-i\u001b[0m, --input <input_file>\n",
+      "          Input file: metadata, stack, volume or image. \n",
+      "   [\u001b[1;32m-o\u001b[0m, --output <output_file=>]\n",
+      "          Output file: metadata, stack, volume or image. \n",
+      "   [\u001b[1;32m--oroot\u001b[0m <root=>]\n",
+      "          Rootname of output individual images. \n",
+      "          Output image format can be set adding extension after rootname as \":ext\". \n",
+      "   \u001b[1;34m--select\u001b[0m <mode>\n",
+      "           Select pixels meeting \n",
+      "      where <mode> can be:\n",
+      "        abs_below <th>\n",
+      "           Absolute value below a threshold \n",
+      "        below <th>\n",
+      "           Below a threshold \n",
+      "        above <th>\n",
+      "           Above a threshold \n",
+      "   \u001b[1;34m--substitute\u001b[0m <substitutionMode=value>\n",
+      "           Substitute selected pixels by \n",
+      "      where <substitutionMode> can be:\n",
+      "        binarize\n",
+      "           Selected are set to 0, non-selected to 1 \n",
+      "        value <new=0>\n",
+      "           New value \n",
+      "        noise <avg=0> <stddev=1>\n",
+      "           Gaussian noise \n",
+      "        avg\n",
+      "           Average of non-selected \n",
+      "\n",
+      "\u001b[1;31m Common options \u001b[0m\n",
+      "   [\u001b[1;32m--more\u001b[0m]\n",
+      "           Show additional options. \n",
+      "\u001b[1;31mEXAMPLES\u001b[0m\n",
+      "   Threshold a volume below a threshold\n",
+      "      \u001b[1;34mxmipp_transform_threshold -i volume.vol -o volumeThresholded.vol --select below 0.01 --substitute value 0\u001b[0m\n",
+      "   Generate a binary mask based on a threshold and apply it\n",
+      "      \u001b[1;34mxmipp_transform_threshold -i volume.vol -o mask.vol --select below 0.5 --substitute binarize\u001b[0m\n",
+      "      \u001b[1;34mxmipp_transform_morphology -i mask.vol --dil\u001b[0m\n",
+      "      \u001b[1;34mxmipp_transform_mask -i volume.vol -o volumeMasked.vol --mask mask.vol\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!scipion run xmipp_transform_threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa8327a2-cb3c-4d52-a71d-5be666c520f7",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def apply_sampling(data, sampling):\n",
     "    data = scipion.xmipp_image_convert(data)\n",
