Implement basic namespacing in the graph

--- a/docs/source/examples/demo.ipynb
+++ b/docs/source/examples/demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "60afa068-1149-4c02-bfd0-40d92c92f7f7",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "5057b89e-44f4-462b-a5e3-b2aac5d65f52",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "0ce8ff5a-10c8-4d51-a0eb-5fad145dd945",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
        "EMDBMetadata(pdb_id='7l70', resolution=3.1, sampling=0.835, size=256, org_x=0, org_y=0, org_z=0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "4fa68922-f07b-429f-8d67-545357fad81f",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmpgkgbrr_n --centerPDB -v 0 --sampling 0.835 --size 256\n",
+      "[XMIPP] scipion run xmipp_volume_from_pdb -i data/downloaded/pdb8tqo.ent -o /tmp/tmphv0119gl --centerPDB -v 0 --sampling 0.835 --size 256\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9e3103a0a714901be0f0f9e0892f7eb",
+       "model_id": "2e1e16207f6b4e6dbeb5e1a6890d35fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "9f69f91b-8f60-4e7e-853a-4c5355ffb949",
    "metadata": {},
    "outputs": [
@@ -163,18 +163,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpgkgbrr_n.vol -o /tmp/tmpr9oh5w83.vol --select below 0.02 --substitute binarize\n",
-      "Input File: /tmp/tmpgkgbrr_n.vol\n",
-      "Output File: /tmp/tmpr9oh5w83.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmphv0119gl.vol -o /tmp/tmpepoc_0f9.vol --select below 0.02 --substitute binarize\n",
+      "Input File: /tmp/tmphv0119gl.vol\n",
+      "Output File: /tmp/tmpepoc_0f9.vol\n",
       "Xmipp command detected\n",
-      "Scipion v3.7.1 - Eugenius\n",
-      "Number of non-zero elements: 487083\n"
+      "Scipion v3.7.1 - Eugenius\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df0b0507c7b647d7aa7053d14758ef13",
+       "model_id": "b5ae407ebf854b4a9c50aed3c3391dd4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -194,21 +193,37 @@
     "    volume, select=\"below 0.02\", substitute=\"binarize\"\n",
     ")\n",
     "\n",
-    "print(f\"Number of non-zero elements: {np.count_nonzero(mask)}\")\n",
-    "\n",
     "mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
+   "id": "55b1bfb4-5934-4d77-9cdc-9168b0ee7536",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of non-zero elements: 487083\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of non-zero elements: {np.count_nonzero(mask)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "0e87a595-d754-40e6-829e-100a1027bff9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0522afd1e91e453788df5f2b1a900d8d",
+       "model_id": "2a2dabe816354791879987a67e6f3f70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "bc70ab1b-0f73-4eba-a790-7c3f5840fe72",
    "metadata": {},
    "outputs": [
@@ -239,9 +254,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmpqtvpk5ky.vol -o /tmp/tmpukjmuyo1.vol --select below 0.5 --substitute binarize\n",
-      "Input File: /tmp/tmpqtvpk5ky.vol\n",
-      "Output File: /tmp/tmpukjmuyo1.vol\n",
+      "[XMIPP] scipion run xmipp_transform_threshold -i /tmp/tmplfznhr4q.vol -o /tmp/tmpeqb4lp8o.vol --select below 0.5 --substitute binarize\n",
+      "Input File: /tmp/tmplfznhr4q.vol\n",
+      "Output File: /tmp/tmpeqb4lp8o.vol\n",
       "Xmipp command detected\n",
       "Scipion v3.7.1 - Eugenius\n"
      ]
@@ -249,7 +264,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "501994f25a634010a5c59b0464e6693a",
+       "model_id": "b15917b4233b4b44bea0d1a94d80d93c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "ed91620c-71ef-4160-8b57-99a72f7fe5d9",
    "metadata": {},
    "outputs": [
@@ -290,7 +305,7 @@
        "4187857"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
